@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.5 2004/08/03 14:10:30 minskim Exp $
+$NetBSD: distinfo,v 1.6 2004/09/11 03:36:54 minskim Exp $
 
-SHA1 (teixsl-fo-3.1nb2/teixsl-fo.zip) = f27e3a7fa159267327bf13f2920c8c8233119e36
-Size (teixsl-fo-3.1nb2/teixsl-fo.zip) = 49964 bytes
+SHA1 (teixsl-fo-3.3/teixsl-fo.zip) = e065ad8891202df0a22c41855da8d4a708d03ab1
+Size (teixsl-fo-3.3/teixsl-fo.zip) = 49467 bytes
